# significant-figures

./: .gitignore  Procfile  README.md  cabal.project  significant-figures.cabal
.github/workflows/: binary.yml  build-and-sdist.yml  deploy-heroku.yml  release.yml  setup.yml
app/: Main.hs
lib/: CHANGELOG.md  README.md  SigFig.hs  significant-figures.cabal
lib/Data/: SigFig.hs
lib/Data/SigFig/: Evaluate.hs  Interface.hs  Parse.hs  Types.hs  Util.hs
lib/app/: Main.hs
lib/src/Data/: SigFig.hs
lib/src/Data/SigFig/: Evaluate.hs  Interface.hs  Parse.hs  PrettyPrint.hs  Types.hs  Util.hs
lib/tests/: SigFigTest.hs
tests/: SigFigTest.hs
web/: Main.hs  Site.hs  significant-figures-web.cabal
web/Site/: CSS.hs  HTML.hs  JS.hs
web/src/: Main.hs
web/src/Site/: CSS.hs  HTML.hs
