cabal-version:      2.4
name:               significant-figures
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Michael Lan
maintainer:         michaellan202@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  exposed-modules:  SigFig
  build-depends:    base ^>=4.14.3.0
                   ,text
                   ,parsec
                   ,HasBigDecimal
                   ,extra

executable significant-figures
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0
                   ,text
                   ,parsec
                   ,HasBigDecimal
                   ,extra
                   ,haskeline ==0.8.1.3
                   ,terminfo >=0.4.1.5
                   ,significant-figures

test-suite significant-figures-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          SigFigTest.hs
  build-depends:    base ^>=4.14.3.0
                   ,tasty ^>=1.4.2.3
                   ,tasty-hunit
                   ,HUnit
                   ,HasBigDecimal
                   ,significant-figures
