cabal-version:      2.4
name:               significant-figures
version:            0.1.0.0
synopsis:           Calculate expressions involving significant figures.
bug-reports:        https://github.com/mizlan/significant-figures/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Michael Lan
maintainer:         michaellan202@gmail.com
category:           Chemistry
extra-source-files: CHANGELOG.md

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  exposed-modules:  Data.SigFig
                   ,Data.SigFig.Interface
                   ,Data.SigFig.Evaluate
                   ,Data.SigFig.Parse
                   ,Data.SigFig.Types
                   ,Data.SigFig.Util
  other-extensions: OverloadedStrings
                   ,BlockArguments
                   ,ImportQualifiedPost
  build-depends:    base ^>=4.14.3.0
                   ,text
                   ,parsec
                   ,HasBigDecimal
                   ,extra

executable significant-figures-cli
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0
                   ,text
                   ,parsec
                   ,HasBigDecimal
                   ,extra
                   ,haskeline ==0.8.1.3
                   ,significant-figures
  if !os(windows) {
    build-depends:  terminfo >=0.4.1.5
  }

executable significant-figures-api
  default-language: Haskell2010
  hs-source-dirs:   web
  main-is:          Main.hs
  other-modules:    Site
  build-depends:    base ^>=4.14.3.0
                   ,text
                   ,aeson
                   ,blaze-html
                   ,Spock
                   ,significant-figures

test-suite significant-figures-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          SigFigTest.hs
  build-depends:    base ^>=4.14.3.0
                   ,text
                   ,tasty ^>=1.4.2.3
                   ,tasty-hunit
                   ,HUnit
                   ,HasBigDecimal
                   ,significant-figures
